test/compile-errors/extern-ptr-is-mut.crow
a extern-pointer

r record
	a a
